<resources>
    <string name="app_name">tours_peru</string>
    <string name="cuscoDescription">la ciudadad de cusco Al contrario del pensamiento popular, el texto de Lorem Ipsum no es simplemente texto aleatorio. Tiene sus raices en una pieza cl´sica de la literatura del Latin, que data del año 45 antes de Cristo, haciendo que este adquiera mas de 2000 años de antiguedad. Richard McClintock, un profesor de Latin de la Universidad de Hampden-Sydney en Virginia, encontró una de las palabras más oscuras de la lengua del latín, "consecteur", en un pasaje de Lorem Ipsum, y al seguir leyendo distintos textos del latín, descubrió la fuente indudable. Lorem Ipsum viene de las secciones 1.10.32 y 1.10.33 de "de Finnibus Bonorum et Malorum" (Los Extremos del Bien y El Mal) por Cicero, escrito en el año 45 antes de Cristo. Este libro es un tratado de teoría de éticas, muy popular durante el Renacimiento. La primera linea del Lorem Ipsum, "Lorem ipsum dolor sit amet..", viene de una linea en la sección 1.10.32
El trozo de texto estándar de Lorem Ipsum usado desde el año 1500 es reproducido debajo para aquellos interesados. Las secciones 1.10.32 y 1.10.33 de "de Finibus Bonorum et Malorum" por Cicero son también reproducidas en su forma original exacta, acompañadas por versiones en Inglés de la traducción realizada en 1914 por H. Rackham.</string>
    <string name="name_departamento_amazonas">AMAZONAS</string>
    <string name="name_departamento_arequipa">AREQUIPA</string>
    <string name="name_departamento_ayacucho">AYACUCHO</string>
    <string name="name_departamento_cuzco">CUSCO</string>
    <string name="correo_vuelo_persona">Email</string>
    <string name="lugarVuelo">lugar</string>
    <string name="fecha_vuelo">fecha de viaje</string>
    <string name="revervar_vuelo">reservar vuelo</string>
    <string name="fecha_vuelo_retorno">Fecha de retorno</string>
    <string name="cantidad_de_reserva">cantidad de reserva</string>
    <string name="tipo_pago">tipo pago</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
</resources>
