<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cibertpoet.tours_peru.reserva_vuelo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="1dp"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/margin_top_reserva"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/margin_top_reserva"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/last_name"


                    >

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/margin_top_reserva"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/correo_vuelo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/correo_vuelo_persona"
                    >

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/margin_top_reserva"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/lugarvuelo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/lugarVuelo"
                    android:inputType="text"
                    >

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/margin_top_reserva"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cantidad_de_reserva"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/cantidad_de_reserva"
                    android:inputType="number"
                    >

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/margin_top_reserva"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fechavuelo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/fecha_vuelo"
                    android:inputType="datetime"
                    >

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/margin_top_reserva"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fecha_vuelo_retorno"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/fecha_vuelo_retorno"
                    android:inputType="text"
                    >

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/margin_top_reserva"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tipo_de_pago"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/tipo_pago"
                    android:theme="@style/efecto_desing_campos"
                    android:inputType="text"
                    >

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>



            <Button
                android:id="@+id/joinUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/revervar_vuelo"


                />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
